Added more sources to bibliography, updated term paper

--- a/bibliografija.bib
+++ b/bibliografija.bib
@@ -9,13 +9,51 @@ http://mirror.datacenter.by/pub/mirrors/CTAN/macros/latex/contrib/biblatex/doc/b
     langid={english},
 }
 
-@article{PvzStraipsnLt,
-    author={A. Pavardenis and B. Pavardonis and C. Pavardauskas},
-    title={Straipsnio pavadinimas},
-    journal={Žurnalo pavadinimas},
-    year={2001},
-    volume={IV},
-    pages={8-17},
+@misc{compuware.com,
+    title={Statistics on user app usage},
+    howpublished={\url{https://www.compuware.com}},
+    year={2013}, 
+    langid={english},
+}
+
+@misc{adobe.com,
+    title={Adobe photoshop products},
+    howpublished={\url{http://www.adobe.com/lt/creativecloud/photography.html}},
+    year={2017}, 
+    langid={english},
+}
+
+@inproceedings{Muccini:2012:STM:2663608.2663615,
+ author = {Muccini, Henry and Di Francesco, Antonio and Esposito, Patrizio},
+ title = {Software Testing of Mobile Applications: Challenges and Future Research Directions},
+ booktitle = {Proceedings of the 7th International Workshop on Automation of Software Test},
+ series = {AST '12},
+ year = {2012},
+ isbn = {978-1-4673-1822-8},
+ location = {Zurich, Switzerland},
+ pages = {29--35},
+ numpages = {7},
+ url = {http://dl.acm.org/citation.cfm?id=2663608.2663615},
+ acmid = {2663615},
+ publisher = {IEEE Press},
+ address = {Piscataway, NJ, USA},
+}
+
+@inproceedings{Satyanarayanan:1996:FCM:248052.248053,
+ author = {Satyanarayanan, M.},
+ title = {Fundamental Challenges in Mobile Computing},
+ booktitle = {Proceedings of the Fifteenth Annual ACM Symposium on Principles of Distributed Computing},
+ series = {PODC '96},
+ year = {1996},
+ isbn = {0-89791-800-2},
+ location = {Philadelphia, Pennsylvania, USA},
+ pages = {1--7},
+ numpages = {7},
+ url = {http://doi.acm.org/10.1145/248052.248053},
+ doi = {10.1145/248052.248053},
+ acmid = {248053},
+ publisher = {ACM},
+ address = {New York, NY, USA},
 } 
 
 @article{PvzStraipsnEn,
