Finished fixing chapter 1

--- a/bibliografija.bib
+++ b/bibliografija.bib
@@ -23,6 +23,27 @@ http://mirror.datacenter.by/pub/mirrors/CTAN/macros/latex/contrib/biblatex/doc/b
     langid={english},
 }
 
+@misc{android_bugs,
+   title={GoogleCode Android open issues},
+   howpublished={\url{https://source.android.com/source/report-bugs}},
+   year={2017},
+   langid={english},
+}
+
+@misc{samsung_s8,
+   title={Samsung galaxy S8+ specs},
+   howpublished={\url{http://www.gsmarena.com/samsung_galaxy_s8+-8523.php}},
+   year={2017},
+   langid={english},
+}
+
+@misc{intel_i9,
+   title={intel core i9-7980XE specifications},
+   howpublished={\url{https://www.intel.com/content/www/us/en/products/processors/core/x-series/i9-7980xe.html}},
+   year={2017},
+   langid={english},
+}
+
 @inproceedings{Muccini:2012:STM:2663608.2663615,
  author = {Muccini, Henry and Di Francesco, Antonio and Esposito, Patrizio},
  title = {Software Testing of Mobile Applications: Challenges and Future Research Directions},
@@ -55,6 +76,16 @@ http://mirror.datacenter.by/pub/mirrors/CTAN/macros/latex/contrib/biblatex/doc/b
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
+
+@INPROCEEDINGS{6496451, 
+author={B. Kirubakaran and V. Karthikeyani}, 
+booktitle={2013 International Conference on Pattern Recognition, Informatics and Mobile Engineering}, 
+title={Mobile application testing 2014; Challenges and solution approach through automation}, 
+year={2013}, 
+pages={79-84}, 
+keywords={mobile computing;operating systems (computers);program testing;OS version;Web application;mobile application development;mobile application landscape;mobile application testing;operating systems;testing approach;Automation;Mobile communication;Mobile computing;Performance evaluation;Smart phones;Testing;automation;mobile applications;software testing}, 
+doi={10.1109/ICPRIME.2013.6496451}, 
+month={Feb},}
 
 @article{PvzStraipsnEn,
     author={A. Surname and B. Tsurname and C. Usurname},
