Update on TMMi info

--- a/bibliografija.bib
+++ b/bibliografija.bib
@@ -87,6 +87,15 @@ keywords={mobile computing;operating systems (computers);program testing;OS vers
 doi={10.1109/ICPRIME.2013.6496451}, 
 month={Feb},}
 
+@book{Burnstein:2010:PST:1965566,
+ author = {Burnstein, Ilene},
+ title = {Practical Software Testing: A Process-Oriented Approach},
+ year = {2010},
+ isbn = {1441928855, 9781441928856},
+ edition = {1st},
+ publisher = {Springer Publishing Company, Incorporated},
+} 
+
 @article{PvzStraipsnEn,
     author={A. Surname and B. Tsurname and C. Usurname},
     title={Article Title},
